# fututel-analytics

./: .env.example  .gitignore  Dockerfile  README.md  claude.md  docker-compose.yml  llm.txt  pyproject.toml  requirements.txt
models/: churn_model_2025-11.pkl  metadata.json
scripts/: create_indexes.sql
src/futuisp_analytics/application/ports/: factura_repository.py
src/futuisp_analytics/application/use_cases/: __init__.py  entrenar_modelo_churn.py  obtener_analisis_anual.py  obtener_historial_usuario.py  obtener_metricas_mes.py  obtener_ranking_global.py  predecir_churn.py
src/futuisp_analytics/domain/entities/: __init__.py  analisis_pago.py
src/futuisp_analytics/domain/services/: periodo_clasificador.py  score_calculator.py
src/futuisp_analytics/domain/value_objects/: __init__.py  periodo_pago.py  score_cliente.py
src/futuisp_analytics/infrastructure/cache/: __init__.py  redis_cache.py
src/futuisp_analytics/infrastructure/config/: __init__.py  logging.py  settings.py
src/futuisp_analytics/infrastructure/database/: connection.py  models.py
src/futuisp_analytics/infrastructure/database/repositories/: factura_repository_impl.py
src/futuisp_analytics/infrastructure/ml/: __init__.py  feature_extractor.py  model_storage.py  model_trainer.py
src/futuisp_analytics/interfaces/api/: main.py
src/futuisp_analytics/interfaces/api/v1/: router.py
src/futuisp_analytics/interfaces/api/v1/endpoints/: __init__.py  analytics.py  health.py  ml.py
src/futuisp_analytics/interfaces/api/v1/schemas/: __init__.py  analytics.py  ml.py  requests.py  responses.py
