[project]
name = "futuisp-analytics"
version = "0.1.0"
description = "Microservicio de análisis estadístico de pagos para FUTUISP"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "sqlalchemy",
    "aiomysql",
    "pydantic>=2.0",
    "pydantic-settings",
    "python-dotenv",
    "redis",
    "polars",
    "xgboost",
    "scikit-learn",
    "joblib>=1.5.2",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "httpx",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"
